# ds-tvbox

./: .editorconfig  .gitignore  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: takedown.yml
.github/workflows/: preflight.yml  refresh.yml  validate.yml
config/: compatibility.yaml  policy.yaml
schemas/: candidates.schema.json  denylist.schema.json  depot.schema.json  health.schema.json  report.schema.json  source-registry.schema.json  tvbox-config.schema.json
sources/: registry.yaml
src/ds_tvbox/: __init__.py  __main__.py  artifact.py  bundle.py  catalog.py  cli.py  collector.py  errors.py  generator.py  gitops.py  health.py  http.py  live.py  manifests.py  models.py  parsers.py  pipeline.py  policy.py  publisher.py  raw.py  registry.py  reports.py  schedule.py  security.py  serialization.py  upstream.py  validation.py  vod.py
state/: release.json
tests/fixtures/vod/: detail.json  detail.xml  home.json  home.xml  missing.json  search.json
tests/integration/: test_pipeline.py  test_publisher.py
tests/static/: test_workflows.py
tests/unit/: test_artifact.py  test_bundle.py  test_candidates_schema.py  test_catalog.py  test_cli.py  test_collector.py  test_generator.py  test_gitops.py  test_health.py  test_http_transport.py  test_live.py  test_manifests.py  test_parsers.py  test_pipeline_helpers.py  test_policy.py  test_raw.py  test_registry.py  test_reports.py  test_schedule.py  test_security.py  test_upstream.py  test_validation.py  test_vod.py
