[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-tvbox"
version = "1.0.3"
description = "Deterministic and safety-focused TVBox source aggregator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "azhansy" }]
dependencies = [
  "defusedxml>=0.7.1,<1",
  "json5>=0.9.25,<1",
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "pytest-timeout>=2.3,<3",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
ds-tvbox = "ds_tvbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ds_tvbox = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
timeout = 30

[tool.coverage.run]
branch = true
source = ["ds_tvbox"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ds_tvbox"]
